--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -16,6 +16,13 @@
 
             />
 
+        <item
+            android:id="@+id/nav_manuel"
+
+            android:title="Mode RGPD"
+
+            />
+
     </group>
 
 
