--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,6 +10,7 @@
         android:name="com.upem.proxyloc.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home"
+
         />
 
     <fragment
@@ -38,7 +39,7 @@
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="com.upem.proxyloc.ui.send.SendFragment"
+        android:name="com.upem.proxyloc.ui.mode.ModeFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
 </navigation>
