--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -23,6 +23,13 @@
 
             />
 
+        <item
+            android:id="@+id/nav_test"
+
+            android:title="Test"
+
+            />
+
     </group>
 
 
