--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,13 +23,13 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.upem.proxyloc.ui.slideshow.SlideshowFragment"
+        android:name="com.upem.proxyloc.ui.spinner.SpinnerFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="com.upem.proxyloc.ui.tools.ToolsFragment"
+        android:name="com.upem.proxyloc.ui.tools.TimePickerFragment"
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
 
