--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/butcherman</item>
+        <item>@font/changa_one</item>
+        <item>@font/crafty_girls</item>
         <item>@font/gravitas_one</item>
         <item>@font/new_rocker</item>
     </array>
