--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -44,4 +44,12 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switchmode" />
+
+    <ListView
+        android:id="@+id/listv"
+        android:layout_width="409dp"
+        android:layout_height="353dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonWifi" />
 </androidx.constraintlayout.widget.ConstraintLayout>
