--- a/app/src/main/res/layout/cell_cards.xml
+++ b/app/src/main/res/layout/cell_cards.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="6dp"/>
