--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -19,14 +19,14 @@
         <item
             android:id="@+id/nav_manuel"
 
-            android:title="Mode RGPD"
+            android:title="RGPD"
 
             />
 
         <item
             android:id="@+id/nav_test"
 
-            android:title="Test"
+            android:title="Activities"
 
             />
 
